--- a/.github/workflows/predeploy.yml
+++ b/.github/workflows/predeploy.yml
@@ -19,6 +19,8 @@ jobs:
     container:
       image: mcr.microsoft.com/playwright:v1.55.1-jammy
     env:
+      HAS_AUTH: ${{ secrets.PLAYWRIGHT_AUTH_STATE != '' }}
+      HAS_URL: ${{ secrets.GAS_WEBAPP_URL != '' }}
       GAS_WEBAPP_URL: ${{ secrets.GAS_WEBAPP_URL }}
     steps:
       - name: Check out repository
@@ -42,10 +44,25 @@ jobs:
         run: npx playwright install --with-deps
 
       - name: Restore Playwright auth state
-        if: ${{ secrets.PLAYWRIGHT_AUTH_STATE != '' }}
+        if: ${{ env.HAS_AUTH == 'true' }}
         run: |
           echo "${{ secrets.PLAYWRIGHT_AUTH_STATE }}" | base64 -d > auth.json
           echo "auth.json restored"
+
+      - name: Debug flags
+        run: |
+          echo "HAS_AUTH=${HAS_AUTH}"
+          echo "HAS_URL=${HAS_URL}"
+
+      - name: Debug auth.json
+        run: |
+          if [ -f auth.json ]; then
+            echo "auth.json exists"
+          else
+            echo "auth.json missing"
+          fi
+          ls -l auth.json || true
+          head -c 200 auth.json || true
 
       - name: Run lint
         run: npm run lint
@@ -57,10 +74,10 @@ jobs:
         run: npm run e2e:ui
 
       - name: Run remote E2E (@remote)
-        if: ${{ secrets.PLAYWRIGHT_AUTH_STATE != '' && secrets.GAS_WEBAPP_URL != '' }}
+        if: ${{ env.HAS_AUTH == 'true' && env.HAS_URL == 'true' }}
         run: npm run e2e:remote
         env:
-          GAS_WEBAPP_URL: ${{ secrets.GAS_WEBAPP_URL }}
+          GAS_WEBAPP_URL: ${{ env.GAS_WEBAPP_URL }}
 
       - name: Run pa11y audit
         run: npm run test:a11y:pa11y
@@ -71,7 +88,7 @@ jobs:
       - name: Health check (200/302 or skip)
         run: npm run health
         env:
-          GAS_WEBAPP_URL: ${{ secrets.GAS_WEBAPP_URL }}
+          GAS_WEBAPP_URL: ${{ env.GAS_WEBAPP_URL }}
 
       - name: Upload Playwright report
         if: ${{ always() }}
