ci(gas-deploy): fix if-expressions using ${{…}} and map GAS_WEBAPP_URL for health step

--- a/.github/workflows/gas-deploy.yml
+++ b/.github/workflows/gas-deploy.yml
@@ -93,7 +93,7 @@ jobs:
         env:
           GAS_WEBAPP_URL: ${{ secrets.GAS_WEBAPP_URL }}
 
-      - name: Health check (200 or 302)
+      - name: Health check (200/302 or skip)
         run: npm run health
         env:
           GAS_WEBAPP_URL: ${{ secrets.GAS_WEBAPP_URL }}
