--- a/.github/workflows/gas-deploy.yml
+++ b/.github/workflows/gas-deploy.yml
@@ -1,5 +1,9 @@
 name: GAS staged test & deploy (single workflow)
 
+permissions:
+  contents: write
+  pull-requests: write
+
 on:
   pull_request:
     branches: [ "main" ]
@@ -81,9 +85,9 @@ jobs:
       - name: Run local UI E2E
         run: npm run e2e:ui
 
-      - name: Run remote E2E (requires auth)
+      - name: Auto-repair remote E2E (requires auth)
         if: ${{ secrets.PLAYWRIGHT_AUTH_STATE != '' && secrets.GAS_WEBAPP_URL != '' }}
-        run: npm run e2e:remote
+        run: node scripts/auto-repair.mjs --run "npm run e2e:remote" --verify "npm run health"
         env:
           GAS_WEBAPP_URL: ${{ secrets.GAS_WEBAPP_URL }}
 
@@ -98,34 +102,23 @@ jobs:
         env:
           GAS_WEBAPP_URL: ${{ secrets.GAS_WEBAPP_URL }}
 
+      - name: Build artifact index
+        if: always()
+        run: node scripts/build-artifact-index.mjs
+        env:
+          ARTIFACT_SOURCES: |
+            playwright-report
+            artifacts
+          ARTIFACT_INDEX_PATH: artifacts/index.json
+
       - uses: actions/upload-artifact@v4
         if: always()
         with:
           name: playwright-report
-          path: playwright-report
+          path: |
+            playwright-report
+            artifacts/index.json
           if-no-files-found: ignore
-
-      - name: "Setup clasp credentials"
-        env:
-          CLASP_CREDENTIALS: ${{ secrets.CLASP_CREDENTIALS }}
-        run: |
-          set -euo pipefail
-          if [ -z "${CLASP_CREDENTIALS:-}" ]; then
-            echo "::error::Missing CLASP_CREDENTIALS secret" >&2
-            exit 1
-          fi
-
-          node - <<'NODE'
-          const fs = require('fs');
-          const creds = process.env.CLASP_CREDENTIALS || '';
-          if (!creds) {
-            throw new Error('::error::Missing CLASP_CREDENTIALS secret');
-          }
-          fs.writeFileSync('service-account.json', creds);
-          NODE
-
-          npx clasp login --creds service-account.json
-          rm -f service-account.json
 
       - name: "Install latest clasp"
         run: npm i -g @google/clasp
@@ -178,9 +171,7 @@ jobs:
               echo "::error::clasp not logged in or token invalid. Fix: 重取本機 ~/.clasprc.json（用 @fuancare.com.tw 有編輯權限的帳號），base64 上傳到 CLASPRC_JSON"; exit 1;
             fi
           else
-            if ! clasp login --status; then
-              echo "::error::clasp not logged in or token invalid. Fix: 重取本機 ~/.clasprc.json（用 @fuancare.com.tw 有編輯權限的帳號），base64 上傳到 CLASPRC_JSON"; exit 1;
-            fi
+            echo "::error::Installed clasp does not support whoami; upgrade to latest and provide CLASPRC_JSON token."; exit 1;
           fi
 
           echo "=== 3) 專案定位 ==="
