--- a/.github/workflows/npm-outdated.yml
+++ b/.github/workflows/npm-outdated.yml
@@ -1,5 +1,9 @@
 name: npm outdated report
 
+permissions:
+  contents: write
+  pull-requests: write
+
 on:
   schedule:
     - cron: '0 1 * * 1'   # 每週一 01:00 UTC
