--- a/.github/workflows/predeploy.yml
+++ b/.github/workflows/predeploy.yml
@@ -10,7 +10,8 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: read
+  contents: write
+  pull-requests: write
 
 jobs:
   predeploy:
@@ -33,10 +34,24 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Setup clasp credentials
+      - name: Write ~/.clasprc.json
+        env:
+          CLASPRC_JSON: ${{ secrets.CLASPRC_JSON }}
         run: |
-          echo '${{ secrets.CLASP_CREDENTIALS }}' > ~/.clasprc.json
-          echo "✔ wrote ~/.clasprc.json"
+          set -euo pipefail
+          [ -n "${CLASPRC_JSON:-}" ] || { echo "::error::Missing CLASPRC_JSON"; exit 1; }
+          node -e "
+            const fs=require('fs');const path=require('path');
+            const target=path.join(process.env.HOME||require('os').homedir(),'.clasprc.json');
+            let s=process.env.CLASPRC_JSON||'';let j;
+            try{ j=JSON.parse(s); }
+            catch(e){ s=s.replace(/\s+/g,''); j=JSON.parse(Buffer.from(s,'base64').toString()); }
+            if(!j.token && j.tokens && j.tokens.default){ j.token=j.tokens.default; }
+            fs.mkdirSync(path.dirname(target),{recursive:true});
+            fs.writeFileSync(target, JSON.stringify(j,null,2));
+          "
+          test -s "$HOME/.clasprc.json"
+          cp "$HOME/.clasprc.json" "$GITHUB_WORKSPACE/.clasprc.json"
 
       - name: Create GAS version (prod)
         id: ver_prod
@@ -63,9 +78,9 @@ jobs:
       - name: Run local E2E (@ui)
         run: npm run e2e:ui
 
-      - name: Run remote E2E (@remote)
+      - name: Auto-repair remote E2E (@remote)
         if: ${{ env.HAS_AUTH == 'true' && env.HAS_URL == 'true' }}
-        run: npm run e2e:remote
+        run: node scripts/auto-repair.mjs --run "npm run e2e:remote" --verify "npm run health"
         env:
           GAS_WEBAPP_URL: ${{ env.GAS_WEBAPP_URL }}
           E2E_PATH: ${{ env.E2E_PATH }}
@@ -75,10 +90,21 @@ jobs:
         env:
           GAS_WEBAPP_URL: ${{ env.GAS_WEBAPP_URL }}
 
+      - name: Build artifact index
+        if: always()
+        run: node scripts/build-artifact-index.mjs
+        env:
+          ARTIFACT_SOURCES: |
+            playwright-report
+            artifacts
+          ARTIFACT_INDEX_PATH: artifacts/index.json
+
       - name: Upload Playwright report
         if: ${{ always() }}
         uses: actions/upload-artifact@v4
         with:
           name: playwright-report
-          path: playwright-report
+          path: |
+            playwright-report
+            artifacts/index.json
           if-no-files-found: ignore
