fix(ci): write clasprc using bash

--- a/.github/workflows/gas-deploy.yml
+++ b/.github/workflows/gas-deploy.yml
@@ -140,28 +140,18 @@ jobs:
           set -euo pipefail
           [ -n "${CLASPRC_JSON:-}" ] || { echo "::error::Missing CLASPRC_JSON"; exit 1; }
           node -e "
-            const fs=require('fs');const p=process.env.HOME+'/.clasprc.json';
-            let s=process.env.CLASPRC_JSON||'';let j;
-            try{ j=JSON.parse(s); }catch(e){ s=s.replace(/\s+/g,''); j=JSON.parse(Buffer.from(s,'base64').toString()); }
-            const ensureClientSettings=(source)=>{
-              if(!source) return;
-              const cid=source.client_id||source.clientId;
-              const cs=source.client_secret||source.clientSecret;
-              if(cid && cs && !j.oauth2ClientSettings){
-                j.oauth2ClientSettings={clientId:cid,clientSecret:cs};
-              }
-            };
-            if(!j.token && j.tokens && j.tokens.default){
-              j.token=j.tokens.default;
-              ensureClientSettings(j.tokens.default);
-            }
-            if(j.token){
-              ensureClientSettings(j.token);
-            }
-            fs.writeFileSync(p, JSON.stringify(j,null,2));
+            const fs=require('fs');const path=require('path');
+            const target=path.join(process.env.HOME||require('os').homedir(),'.clasprc.json');
+            let s=process.env.CLASPRC_JSON||''; let j;
+            try { j=JSON.parse(s); }
+            catch(e) { s=s.replace(/\s+/g,''); j=JSON.parse(Buffer.from(s,'base64').toString()); }
+            if(!j.token && j.tokens && j.tokens.default){ j.token=j.tokens.default; }
+            fs.mkdirSync(path.dirname(target),{recursive:true});
+            fs.writeFileSync(target,JSON.stringify(j,null,2));
           "
           test -s "$HOME/.clasprc.json"
           cp "$HOME/.clasprc.json" "$GITHUB_WORKSPACE/.clasprc.json"
+        shell: bash
 
       - name: "Preflight: check TEST secrets & clasp & script"
         run: |
